# sctjudge

./: .gitignore  COPYING  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac  sctjudge.spec.in
l4basic/: COPYING  Makefile  README
l4basic/l4arg/: Makefile  Makefile.in  l4arg.h  qarg.c  toargv.c
l4basic/l4bds/: Makefile  Makefile.in  l4bds.h  list.c
l4basic/l4darr/: Makefile  Makefile.in  d1array.c  d1arrstr.c  d2array.c  l4darr.h
src/: CliCommon.h  CliMain.c  JudgeCommon.h  JudgeMain.c  Makefile.am  ProcCheckTime.c  ProcCommon.h  ProcMain.c  ProcMonitor.c  SctCommon.c  SctCommon.h  SctConst.h  SctMain.c  checktle.c  common.c  common.h  config2.h  core.h  disptime.c  main.c  mkchild.c  sctcore.h  version.h.in
